[package]
name = "noline"
version = "0.2.0"
edition = "2021"
authors = ["Eivind Alexander Bergem <eivind@rustnekretser.no>"]
license = "MPL-2.0"
description = "A no_std line editor"
repository = "https://github.com/rustne-kretser/noline"
readme = "../README.md"
categories = ["no-std", "command-line-interface"]
keywords = ["no_std", "readline"]
include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = { version = "0.5.6", default-features = false }
embedded-hal = { version = "0.2.6", optional = true }
nb = { version = "1.0.0", optional = true }
genawaiter = { git = "https://github.com/simmsb/genawaiter", default-features = false }

[features]
default = ["embedded"]
std = []
embedded = ["embedded-hal", "nb"]
alloc = []

[dev-dependencies]
crossbeam = "0.8.1"
nb = { version = "1.0.0" }
termion = "1.5.6"

[package.metadata.docs.rs]
all-features = true
